--- a/app/src/main/res/layout/activity_camera_page.xml
+++ b/app/src/main/res/layout/activity_camera_page.xml
@@ -8,51 +8,22 @@
 
 
 
-        <fragment
+    <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/arFragment"
         android:name="com.example.twoscreenapp.CustomArFragment"
         tools:layout="@layout/activity_camera_page" />
 
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="87dp"
-        android:layout_height="70dp"
-        android:layout_marginBottom="80dp"
-        android:onClick="trigger1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.092"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageButton"
-        app:layout_constraintVertical_bias="0.324"
-        app:srcCompat="@drawable/ic_pamela_hat"
-        android:visibility="gone"/>
-
-    <ImageButton
-        android:id="@+id/cameraButton2"
+    <Button
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="takePicture"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:onClick="back"
+        android:text="Back"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.886"
-        app:srcCompat="@drawable/btn_camera" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
-        android:id="@+id/scrollup2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="popUp"
-        app:srcCompat="@drawable/ic_baseline_arrow_drop_up_24"
-        tools:layout_editor_absoluteX="157dp"
-        tools:layout_editor_absoluteY="683dp" />
-=======
     <!--    <Button-->
 <!--        android:id="@+id/picCamera"-->
 <!--        android:layout_width="wrap_content"-->
@@ -67,12 +38,13 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="364dp"
+        android:layout_marginTop="340dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_bar_page2" />
+        app:srcCompat="@drawable/ic_bar_page2"
+        android:visibility="gone"/>
 
     <Button
         android:id="@+id/button"
@@ -83,8 +55,9 @@
         android:onClick="trigger2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button3"
-        app:layout_constraintHorizontal_bias="0.25"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.091"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"/>
 
     <Button
         android:id="@+id/button3"
@@ -96,19 +69,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.882"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"/>
 
     <ImageButton
         android:id="@+id/cameraButton"
-        android:layout_width="78dp"
-        android:layout_height="78dp"
+        android:layout_width="71dp"
+        android:layout_height="66dp"
         android:onClick="takePicture"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.83"
+        app:layout_constraintVertical_bias="0.867"
         app:srcCompat="@drawable/btn_camera" />
 
     <Button
