updated UI buttons

--- a/app/src/main/res/layout/activity_camera_page.xml
+++ b/app/src/main/res/layout/activity_camera_page.xml
@@ -15,15 +15,6 @@
         android:name="com.example.twoscreenapp.CustomArFragment"
         tools:layout="@layout/activity_camera_page" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="back"
-        android:text="Back"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <!--    <Button-->
 <!--        android:id="@+id/picCamera"-->
 <!--        android:layout_width="wrap_content"-->
@@ -33,6 +24,21 @@
 <!--        app:layout_constraintEnd_toEndOf="parent"-->
 <!--        app:layout_constraintHorizontal_bias="0"-->
 <!--        app:layout_constraintStart_toStartOf="parent" />-->
+
+    <Button
+        android:id="@+id/button2"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="70dp"
+        android:layout_height="57dp"
+        android:foreground="?attr/actionModeCloseDrawable"
+        android:foregroundTint="#272C32"
+        android:onClick="back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.005"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.023" />
 
     <ImageView
         android:id="@+id/imageView"
