--- a/app/src/main/res/layout/verified.xml
+++ b/app/src/main/res/layout/verified.xml
@@ -7,7 +7,7 @@
     android:background="#ADD8E6">
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/backButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
