--- a/app/src/main/res/layout/activity_camera_page.xml
+++ b/app/src/main/res/layout/activity_camera_page.xml
@@ -26,6 +26,15 @@
 <!--        app:layout_constraintStart_toStartOf="parent" />-->
 
     <Button
+        android:id="@+id/extractFaceshape"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="faceShapeDetect"
+        android:text="Extract face shape"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></Button>
+
+    <Button
         android:id="@+id/button2"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="70dp"
