--- a/app/src/main/res/layout/likes.xml
+++ b/app/src/main/res/layout/likes.xml
@@ -123,7 +123,7 @@
         app:layout_constraintVertical_bias="0.582" />
 
     <ImageButton
-        android:id="@+id/imageButton3"
+        android:id="@+id/anyname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#00000000"
