--- a/app/src/main/res/layout/verified.xml
+++ b/app/src/main/res/layout/verified.xml
@@ -18,7 +18,7 @@
         app:srcCompat="@drawable/backbutton" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/verifiedImg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,7 +30,7 @@
         app:srcCompat="@drawable/verified" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/completeMsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -41,7 +41,7 @@
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/verifiedImg" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
