--- a/app/src/main/res/layout/new_camera_page.xml
+++ b/app/src/main/res/layout/new_camera_page.xml
@@ -24,18 +24,20 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:background="#0000"
+        android:onClick="trigger1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/cameraButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.934"
-        app:srcCompat="@drawable/ic_sunglasses" />
+        app:srcCompat="@drawable/ic_sunglasses1" />
 
     <ImageButton
         android:id="@+id/imageButton3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#0000"
+        android:onClick="faceShapeDetect"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cameraButton"
@@ -47,6 +49,7 @@
         android:id="@+id/imageView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="takePicture"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
