--- a/app/src/main/res/layout/new_camera_page.xml
+++ b/app/src/main/res/layout/new_camera_page.xml
@@ -35,13 +35,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:background="#0000"
-            android:onClick="toggleProduct"
+            android:onClick="trigger1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/cameraButton"
+            app:layout_constraintHorizontal_bias="0.435"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.934"
-            app:srcCompat="@drawable/ic_sunglasses1" />
+            app:layout_constraintVertical_bias="0.953"
+            app:srcCompat="@drawable/btn_sunglasses" />
 
         <ImageButton
             android:id="@+id/imageButton3"
@@ -70,7 +71,7 @@
             app:srcCompat="@drawable/ic_circle" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <include layout="@layout/product"/>
+<!--    <include layout="@layout/product"/>-->
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
