--- a/app/src/main/res/layout/new_camera_page.xml
+++ b/app/src/main/res/layout/new_camera_page.xml
@@ -63,6 +63,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <include layout="@layout/product"/>
+<!--    <include layout="@layout/product"/>-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
