--- a/app/src/main/res/layout/a_new_camera_page.xml
+++ b/app/src/main/res/layout/a_new_camera_page.xml
@@ -6,6 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/arFragment"
+        android:name="com.example.twoscreenapp.CustomArFragment"
+        tools:layout="@layout/activity_camera_page" />
+
     <ImageButton
         android:id="@+id/cameraButton"
         android:layout_width="wrap_content"
@@ -55,6 +62,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.953"
         app:srcCompat="@drawable/ic_circle" />
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include layout="@layout/new_product_page" />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
