--- a/app/src/main/res/layout/activity_recommendation_page.xml
+++ b/app/src/main/res/layout/activity_recommendation_page.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
         android:layout_marginBottom="264dp"
-        android:onClick="viewRec"
+        android:onClick="getRec"
         android:text="view recommended"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
