--- a/app/src/main/res/layout/last_page.xml
+++ b/app/src/main/res/layout/last_page.xml
@@ -74,4 +74,16 @@
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/ic_download" />
 
+    <ImageButton
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:background="#00000000"
+        android:onClick="back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/backbutton" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
