--- a/app/src/main/res/layout/fragment_recommendations.xml
+++ b/app/src/main/res/layout/fragment_recommendations.xml
@@ -15,35 +15,41 @@
 
     <ImageButton
         android:id="@+id/Model1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="TestReco"
+        android:layout_width="145dp"
+        android:layout_height="127dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="60dp"
-        android:src="@drawable/ic_launcher_background" />
+        android:background="#0000"
+        android:onClick="TestReco"
+        tools:ignore="OnClick" />
+
+
     <ImageButton
         android:id="@+id/Model2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="145dp"
+        android:layout_height="127dp"
         android:layout_marginStart="200dp"
         android:layout_marginTop="60dp"
-        android:src="@drawable/ic_launcher_background" />
+        android:background="#0000"
+        tools:ignore="OnClick" />
 
     <ImageButton
         android:id="@+id/Model3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="145dp"
+        android:layout_height="127dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="200dp"
-        android:src="@drawable/ic_launcher_background" />
+        android:background="#0000"
+        tools:ignore="OnClick" />
 
     <ImageButton
-        android:id="@+id/Model4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="200dp"
-        android:src="@drawable/ic_launcher_background" />
+    android:id="@+id/Model4"
+    android:layout_width="145dp"
+    android:layout_height="127dp"
+    android:layout_marginStart="200dp"
+    android:layout_marginTop="200dp"
+    android:background="#0000"
+    tools:ignore="OnClick" />
 
 
 
